# Logistics

./: .gitignore
server/: .gitignore  __init__.py  pyproject.toml
server/src/logistics/: __main__.py  main.py
server/src/logistics/api/: __init__.py  client.py  protocol.py  server.py
server/src/logistics/domain/: __init__.py  builder.py  enums.py  exceptions.py  graph.py  models.py  strategy.py
server/src/logistics/infrastructure/: __init__.py  database.py  orm.py  repositories.py  seed.py
server/src/logistics/service/: __init__.py  dto.py  logistics_service.py
server/tests/: conftest.py
server/tests/e2e/: scenarios.md
server/tests/unit/: conftest.py  test_cargo.py  test_cargo_builder.py  test_logistics_service.py  test_order.py  test_protocol.py  test_strategy.py  test_transport_graph.py  test_transport_link.py
webapp/: app.py
webapp/static/: style.css
webapp/templates/: base.html  calculate_route.html  create_order.html  dashboard.html  index.html  login.html  manage_order.html  manage_orders.html  my_orders.html  order_detail.html  register.html
