[project]
name = "logistics-service"
version = "0.1.0"
description = "Сервис логистики: отслеживание посылок и оптимизация маршрутов"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
webapp = [
    "flask>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]